--- a/content/themes/liebling-master/default.hbs
+++ b/content/themes/liebling-master/default.hbs
@@ -12,7 +12,6 @@
 
     {{!-- Preload assets --}}
     <link rel="preload" href="{{asset "css/app.css"}}" as="style" />
-    <link rel="preload" href="{{asset "css/main.css"}}" as="style" />
     <link rel="preload" href="{{asset "js/manifest.js"}}" as="script" />
     <link rel="preload" href="{{asset "js/vendor/content-api.min.js"}}" as="script" />
     <link rel="preload" href="{{asset "js/vendor.js"}}" as="script" />
@@ -24,8 +23,11 @@
     {{{block "preload"}}}
 
     {{!-- Styles & Scripts --}}
+        <link rel="stylesheet" type="text/css"  
+          href="{{asset "css/main.css"}}" />
     <style>
       /* These font-faces are here to make fonts work if the Ghost instance is installed in a subdirectory */
+
 
       /* source-sans-pro-regular */
       @font-face {
