add btn class and card class, disable light/dark toggle, add Google Font, change language to fr

--- a/content/themes/liebling-master/default.hbs
+++ b/content/themes/liebling-master/default.hbs
@@ -25,6 +25,9 @@
     {{!-- Styles & Scripts --}}
         <link rel="stylesheet" type="text/css"  
           href="{{asset "css/main.css"}}" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
+        <link rel="stylesheet" type="text/css"  
+          href="{{asset "css/custom.css"}}" />
     <style>
       /* These font-faces are here to make fonts work if the Ghost instance is installed in a subdirectory */
 
