--- a/content/themes/liebling-master/partials/loop.hbs
+++ b/content/themes/liebling-master/partials/loop.hbs
@@ -4,7 +4,7 @@
   {{#is "post"}}
     <div class="m-recommended-slider__item glide__slide">
   {{/is}}
-  <article class="m-article-card {{#unless feature_image}}no-picture{{/unless}} {{post_class}}">
+  <article class="ppt-card {{#unless feature_image}}no-picture{{/unless}} {{post_class}}">
     <div class="m-article-card__picture">
       <a href="{{url}}" class="m-article-card__picture-link" aria-hidden="true" tabindex="-1"></a>
       {{#if feature_image}}
